--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -90,7 +90,7 @@ During my time in trying to understand how batteries work and enginering apprach
 Lithium-ion based batteryies are favoruable largley due to the highly reducitve nature of Lithium, taking the potential relative to hydorgens reduction, lithiums half-reaction is $-3.01V$ (cite gregg) relative to hydrogens half-reaction, meaning lithium can release its outershell electron relativley easy. Any cells potential difference is the diference in potentals of the negative and posoitve solid state electrodes $V_t = \phi_s^+ (t) -  \phi_s^- (t) - IR_{cc}$ where $R_{cc}$ is the current collector or tabs ohmic resistance (cite liuying), so having negative half reduction of lithium, allows a varierty of postive electordes (where the oxidation occurs), to yeild a high battery voltage. Coupled with Lithiums low molecular weight, a high energy density cell can be achived to. The force produced by the potential difference between the electrodes drives the elctrons via the external circuit, providing useful work, allowing lithium batteries to act as an energy storage medium.
 
 
-Lithium batteries all follow the the same basic pricipble of operation, as show in .... They consist of a posotive and negative elctrode, eleoctrolite, a seperator and current collectors. Unlike many other battery chemistries, where the metal ions undergo chemical reactions at the electrodes which change the composition of the electrodes, lithium ions intercolate and deintercalate within the electrodes - they are in essance absorbed to and from the electrode structures (cite greg p). The negative electrode is usually of a grpahine based structure, allowing up to 1 lithium atom to be stored per 6 carbon atoms, whilst the posotive electrode can vary greatly between different lithium batteries; the most common posotive electrodes are often composed of transitional metal oxides such as LCO, LMO, NMC, NCA (cite Alex K Hoech et al). The lithium state in the graphine is similar to that of idividual lithium atoms, thus the elctrode potention of the negative electoride is very similar to that of pure lithium (~ -3V) (cite liquin), although its lithium storage abilities are usually lower than the porsotive electrodes. The lithium ions within the posotive electrodes are in a much lower energy state, thus their reaction potential ranges from -1 -- 2V, therefore, overall there is a large potential difference created by the want of the posotive electrode gaining electrons and the lithium ions, and the want of the lithium within the carbon of the negative electrode to give up the lithium ions and electrons (relative to each other). In general, the negative electrodes used currently are carbon based, there capcity to hold the lithium (per unit volume) is greater that the posotive electrodes used today as shown in figurexx (cite Alex), but as discussed later in this section the negative electrode is often the key limiting factor in degredation. The posotive electrode materials vary greatly in material, but since this electrode has the biggest electrode potential, it has a largest impact on the overall cell voltage, and thus energy density of the cell, in addition since per volume it holds less lithium, electrode material with higer lithium capcity will be of greater affect that improving the negative electrodes capcity. The two reactions with lithium with the battery electrodes chosen for this project are shown below (during dicharge, the reactions proceede from left to right, for the charging process, it's right to left):
+Lithium batteries all follow the the same basic pricipble of operation, as show in .... They consist of a posotive and negative elctrode, eleoctrolite, a seperator and current collectors. Unlike many other battery chemistries, where the metal ions undergo chemical reactions at the electrodes which change the composition of the electrodes, lithium ions intercolate and deintercalate within the electrodes structure - they are in essance absorbed to and from the electrode structures (cite greg p). The negative electrode is usually of a gaphite based structure, allowing up to 1 lithium atom to be stored per 6 carbon atoms, whilst the posotive electrode can vary greatly between different lithium batteries; the most common are often composed of transitional metal oxides such as LCO, LMO, NMC, NCA (cite Alex K Hoech et al). The electrochemical state of lithium in the graphine is similar to that of idividual lithium atoms, thus the elctrode potention of the negative electoride is very similar to that of pure lithium (~ -3V) (cite liquin), although its lithium storage abilities are usually lower than the porsotive electrodes. The lithium ions within the posotive electrodes are in a much lower energy state, thus their reaction potential ranges from -1 -- 2V, therefore, overall there is a large potential difference created by the want of the posotive electrode gaining electrons and the lithium ions, and the want of the lithium within the carbon of the negative electrode to give up the lithium ions and electrons (relative to each other). In general, the negative electrodes used currently are carbon based, there capcity to hold the lithium (per unit volume) is greater that the posotive electrodes used today as shown in figurexx (cite Alex), but as discussed later in this section the negative electrode is often the key limiting factor in degredation. The posotive electrode materials vary greatly in material, but since this electrode has the biggest electrode potential, it has a largest impact on the overall cell voltage, and thus energy density of the cell, in addition since per volume it holds less lithium, electrode material with higer lithium capcity will be of greater affect that improving the negative electrodes capcity. The two reactions with lithium with the battery electrodes chosen for this project are shown below (during dicharge, the reactions proceede from left to right, for the charging process, it's right to left):
 \begin{align}
   \ch{LiFePO4 &<=> Li+ + e- + FePO4} \label{eq:lithium} \\
   \ch{C6 + Li+ + e- &<=> LiC6} \label{eq:sodium}
